Fixed Row sizing on website on small screens
Removed White gap on 4th and 5th Row.

Added some extra padding to Contact me box for smaller sizes.

Removed Padding from 5th secition on small screen sizes.

Lessened the Gap of grid on small screen sizes.

--- a/app.css
+++ b/app.css
@@ -464,7 +464,7 @@
 .projects-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-auto-rows: minmax(500px, auto);
+    grid-auto-rows: 500px 500px 500px 500px 500px;
     gap: 40px 30px;
 }
 
@@ -960,7 +960,7 @@ align-items: center;
 }
 @media screen and (max-width: 500px){
     .contact-form-container {
-        padding: 50px 10px;
+        padding: 40px 20px;
     }
 }
 @media screen and (max-width: 1194px){
@@ -1037,6 +1037,13 @@ align-items: center;
     .built-projects-box {
         bottom: -175px;
     }
+    .fifthContent {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    .fourthSection {
+        padding-bottom: 100px;
+    }
     .thirdSection {
         padding-top: 150px;
         padding-bottom: 150px;
@@ -1091,13 +1098,16 @@ align-items: center;
         padding: 10px 15px;
         font-size: 0.875rem;
     }
+    .projects-grid {
+        grid-auto-rows: 500px 500px 500px 400px 400px;
+        gap: 15px 0px;
+
+    }
     .card:nth-of-type(3){
         grid-column: 1/7;
-        max-height: 400px;
     }
     .card:nth-of-type(4){
         grid-column: 1/7;
-        max-height: 400px;
     }
     .medium-card-bottom-inner-content {
         padding: 20px;
